force-app/main/default/objects/Load_Curve__c/Load_Curve__c.object-meta.xml
<CustomObject>
    <description>These are standardized load curves to be used when a user doesn&#39;t have actual meter data</description>
    <label>Load Curve</label>
    <nameField>
        <label>Load Curve Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Load Curves</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>