force-app/main/default/objects/Load_Curve__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <description>Usage for the month of April</description>
    <inlineHelpText>Usage for the month of April</inlineHelpText>
    <label>April</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>