force-app/main/default/objects/Load_Curve__c/fields/August__c.field-meta.xml
<CustomField>
    <fullName>August__c</fullName>
    <description>Usage for the month of August</description>
    <inlineHelpText>Usage for the month of August</inlineHelpText>
    <label>August</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>