force-app/main/default/objects/Load_Curve__c/fields/December__c.field-meta.xml
<CustomField>
    <fullName>December__c</fullName>
    <description>Usage for the month of December</description>
    <inlineHelpText>Usage for the month of December</inlineHelpText>
    <label>December</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>