force-app/main/default/objects/Load_Curve__c/fields/February__c.field-meta.xml
<CustomField>
    <fullName>February__c</fullName>
    <description>Usage for the month of February</description>
    <inlineHelpText>Usage for the month of February</inlineHelpText>
    <label>February</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>