force-app/main/default/objects/Load_Curve__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <description>Usage for the month of January</description>
    <inlineHelpText>Usage for the month of January</inlineHelpText>
    <label>January</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>