force-app/main/default/objects/Load_Curve__c/fields/July__c.field-meta.xml
<CustomField>
    <fullName>July__c</fullName>
    <description>Usage for the month of July</description>
    <inlineHelpText>Usage for the month of July</inlineHelpText>
    <label>July</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>