force-app/main/default/objects/Load_Curve__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <description>Usage for the month of June</description>
    <inlineHelpText>Usage for the month of June</inlineHelpText>
    <label>June</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>