force-app/main/default/objects/Load_Curve__c/fields/March__c.field-meta.xml
<CustomField>
    <fullName>March__c</fullName>
    <description>Usage for the month of March</description>
    <inlineHelpText>Usage for the month of March</inlineHelpText>
    <label>March</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>