force-app/main/default/objects/Load_Curve__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <description>Usage for the month of May</description>
    <inlineHelpText>Usage for the month of May</inlineHelpText>
    <label>May</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>