force-app/main/default/objects/Load_Curve__c/fields/MDQ__c.field-meta.xml
<CustomField>
    <fullName>MDQ__c</fullName>
    <description>If the load curve is to be used for storage, what is the mdq for the assumed usage?</description>
    <inlineHelpText>If the load curve is to be used for storage, what is the mdq for the assumed usage?</inlineHelpText>
    <label>MDQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>