force-app/main/default/objects/Load_Curve__c/fields/November__c.field-meta.xml
<CustomField>
    <fullName>November__c</fullName>
    <description>Usage for the month of November</description>
    <inlineHelpText>Usage for the month of November</inlineHelpText>
    <label>November</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>