force-app/main/default/objects/Load_Curve__c/fields/October__c.field-meta.xml
<CustomField>
    <fullName>October__c</fullName>
    <description>Usage for the month of October</description>
    <inlineHelpText>Usage for the month of October</inlineHelpText>
    <label>October</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>