force-app/main/default/objects/Load_Curve__c/fields/Price_Padding__c.field-meta.xml
<CustomField>
    <fullName>Price_Padding__c</fullName>
    <label>Price Padding</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>