force-app/main/default/objects/Load_Curve__c/fields/September__c.field-meta.xml
<CustomField>
    <fullName>September__c</fullName>
    <description>Usage for the month of September</description>
    <inlineHelpText>Usage for the month of September</inlineHelpText>
    <label>September</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>