force-app/main/default/objects/Load_Curve__c/fields/TDSP__c.field-meta.xml
<CustomField>
    <fullName>TDSP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Which TDSP does the load curve represent</description>
    <inlineHelpText>Which TDSP does the load curve represent</inlineHelpText>
    <label>TDSP</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>Load Curves</relationshipLabel>
    <relationshipName>Load_Curves</relationshipName>
    <type>Lookup</type>
</CustomField>