force-app/main/default/objects/Load_Curve__c/fields/Usage_Profile__c.field-meta.xml
<CustomField>
    <fullName>Usage_Profile__c</fullName>
    <description>Which usage profile does this load curve match?</description>
    <inlineHelpText>Which usage profile does this load curve match?</inlineHelpText>
    <label>Usage Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>500 kWh</fullName>
            </value>
            <value>
                <fullName>1000 kWh</fullName>
            </value>
            <value>
                <fullName>1500 kWh</fullName>
            </value>
            <value>
                <fullName>2000 kWh</fullName>
            </value>
            <value>
                <fullName>Less Than 50 KVA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>