force-app/main/default/objects/Load_Curve__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TDSP__c</columns>
    <columns>January__c</columns>
    <columns>February__c</columns>
    <columns>March__c</columns>
    <columns>April__c</columns>
    <columns>May__c</columns>
    <columns>June__c</columns>
    <columns>July__c</columns>
    <columns>August__c</columns>
    <columns>September__c</columns>
    <columns>October__c</columns>
    <columns>November__c</columns>
    <columns>December__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>